// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test (If) statement With (Then) and (Else) - [chaining version] 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 63))
            storage (literal (nat 1) (\\"if.test.ts\\" 64))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 66) ((set_type (params (\\"if.test.ts\\" 66)) \\"nat\\" (\\"if.test.ts\\" 66)) (ifBlock (ge (params (\\"if.test.ts\\" 66)) (literal (nat 5) (\\"if.test.ts\\" 66)) (\\"if.test.ts\\" 66)) ((set (data) (params (\\"if.test.ts\\" 66)) (\\"if.test.ts\\" 66))) (\\"if.test.ts\\" 66)) (elseBlock ((set (data) (literal (nat 5) (\\"if.test.ts\\" 66)) (\\"if.test.ts\\" 66)))))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 63))
        )
        "
`;

exports[`Test (If) statement With (Then) and (Else) - [chaining version] 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "nat",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "nat",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CAR",
        },
        Object {
          "prim": "DUP",
        },
        Object {
          "args": Array [
            Object {
              "prim": "nat",
            },
            Object {
              "int": "5",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "SWAP",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "GE",
        },
        Object {
          "args": Array [
            Array [],
            Array [
              Object {
                "prim": "DROP",
              },
              Object {
                "args": Array [
                  Object {
                    "prim": "nat",
                  },
                  Object {
                    "int": "5",
                  },
                ],
                "prim": "PUSH",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Test (If) statement With (Then) and (Else) 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 44))
            storage (literal (nat 1) (\\"if.test.ts\\" 45))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 47) ((set_type (params (\\"if.test.ts\\" 49)) \\"nat\\" (\\"if.test.ts\\" 49)) (ifBlock (ge (params (\\"if.test.ts\\" 49)) (literal (nat 5) (\\"if.test.ts\\" 49)) (\\"if.test.ts\\" 49)) ((set (data) (params (\\"if.test.ts\\" 49)) (\\"if.test.ts\\" 49))) (\\"if.test.ts\\" 49)) (elseBlock ((set (data) (literal (nat 5) (\\"if.test.ts\\" 49)) (\\"if.test.ts\\" 49)))))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 44))
        )
        "
`;

exports[`Test (If) statement With (Then) and (Else) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "nat",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "nat",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CAR",
        },
        Object {
          "prim": "DUP",
        },
        Object {
          "args": Array [
            Object {
              "prim": "nat",
            },
            Object {
              "int": "5",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "SWAP",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "GE",
        },
        Object {
          "args": Array [
            Array [],
            Array [
              Object {
                "prim": "DROP",
              },
              Object {
                "args": Array [
                  Object {
                    "prim": "nat",
                  },
                  Object {
                    "int": "5",
                  },
                ],
                "prim": "PUSH",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Test (If) statement Without (Else) - [chaining version] 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 31))
            storage (literal (nat 1) (\\"if.test.ts\\" 32))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 34) ((set_type (params (\\"if.test.ts\\" 36)) \\"nat\\" (\\"if.test.ts\\" 36)) (ifBlock (ge (params (\\"if.test.ts\\" 36)) (literal (nat 5) (\\"if.test.ts\\" 36)) (\\"if.test.ts\\" 36)) ((set (data) (params (\\"if.test.ts\\" 36)) (\\"if.test.ts\\" 36))) (\\"if.test.ts\\" 36)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 31))
        )
        "
`;

exports[`Test (If) statement Without (Else) - [chaining version] 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "nat",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "nat",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "UNPAIR",
        },
        Object {
          "prim": "DUP",
        },
        Object {
          "args": Array [
            Object {
              "prim": "nat",
            },
            Object {
              "int": "5",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "SWAP",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "GE",
        },
        Object {
          "args": Array [
            Array [
              Object {
                "prim": "SWAP",
              },
              Object {
                "prim": "DROP",
              },
            ],
            Array [
              Object {
                "prim": "DROP",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Test (If) statement Without (Else) 1`] = `
"
        (
            template_id (static_id 0 (\\"if.test.ts\\" 18))
            storage (literal (nat 1) (\\"if.test.ts\\" 19))
            storage_type (())
            messages ((ep1 True False False True (\\"if.test.ts\\" 21) ((set_type (params (\\"if.test.ts\\" 23)) \\"nat\\" (\\"if.test.ts\\" 23)) (ifBlock (ge (params (\\"if.test.ts\\" 23)) (literal (nat 5) (\\"if.test.ts\\" 23)) (\\"if.test.ts\\" 23)) ((set (data) (params (\\"if.test.ts\\" 23)) (\\"if.test.ts\\" 23))) (\\"if.test.ts\\" 23)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"if.test.ts\\" 18))
        )
        "
`;

exports[`Test (If) statement Without (Else) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "nat",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "nat",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "UNPAIR",
        },
        Object {
          "prim": "DUP",
        },
        Object {
          "args": Array [
            Object {
              "prim": "nat",
            },
            Object {
              "int": "5",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "SWAP",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "GE",
        },
        Object {
          "args": Array [
            Array [
              Object {
                "prim": "SWAP",
              },
              Object {
                "prim": "DROP",
              },
            ],
            Array [
              Object {
                "prim": "DROP",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;
